--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script>
         const button = document.getElementById('clicked');
         const arr = ["You're 'sweet'", "Am I make your day?", "If yes,..."];
-        const arr1 = ["I just want to say that....", "That's my favorite song :)", "Good luck with your work, homie!"];
+        const arr1 = ["I just want to say that....", "That's my favorite song :)", "Good luck with Quiz 2!"];
 
         let i = 0;
 
